--- a/views/form.jade
+++ b/views/form.jade
@@ -3,8 +3,8 @@ extends layout
 block content 
   h1= title
   form(action="/new", method="post") 
-    label(for="user") User
-    input(type="text", name="user", id="user", placeholder="username")
-    label(for="text") Message
-    input(type="text", name="text", id="text", placeholder="hello...")
+    label(for="messageUser") User
+    input(type="text", name="messageUser", id="messageUser", placeholder="username")
+    label(for="messageText") Message
+    input(type="text", name="messageText", id="messageText", placeholder="hello...")
     button(type="submit") Send
