It's now possible to send messages to the board

--- a/views/form.jade
+++ b/views/form.jade
@@ -1,6 +1,7 @@
 extends layout 
 
 block content 
+  a(href="/") Go back 
   h1= title
   form(action="/new", method="post") 
     label(for="messageUser") User
