Refer to message author as 'Author' on the UI
- Improve placeholder texts

--- a/views/form.jade
+++ b/views/form.jade
@@ -4,8 +4,8 @@ block content
   a(href="/") Go back 
   h1= title
   form(action="/new", method="post" autocomplete="off") 
-    label(for="messageUser") User
-    input(type="text", name="messageUser", id="messageUser", placeholder="username")
+    label(for="messageUser") Author
+    input(type="text", name="messageUser", id="messageUser", placeholder="enter your name")
     label(for="messageText") Message
     input(type="text", name="messageText", id="messageText", placeholder="hello...")
     button(type="submit") Send
